--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@ckeditor/ckeditor5-angular": "^1.1.0",
     "@ckeditor/ckeditor5-build-classic": "^12.1.0",
     "@firebase/database": "0.2.1",
+    "@ng-select/ng-select": "^2.20.5",
     "@ngrx/store": "^6.1.2",
     "@ngrx/store-devtools": "^6.1.2",
     "@types/sweetalert": "^2.0.4",
