--- a/package.json
+++ b/package.json
@@ -9,7 +9,8 @@
     "test": "ng test",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "build-prod": "node --max-old-space-size=4096 node_modules/@angular/cli/bin/ng build --prod"
+    "build-prod": "node --max-old-space-size=4096 node_modules/@angular/cli/bin/ng build --prod",
+    "build-qa": "node --max-old-space-size=4096 node_modules/@angular/cli/bin/ng build --configuration=staging"
   },
   "private": true,
   "dependencies": {
