--- a/package.json
+++ b/package.json
@@ -39,11 +39,14 @@
     "app": "^0.1.0",
     "classlist.js": "^1.1.20150312",
     "core-js": "^2.6.3",
+    "crypto": "^1.0.1",
     "crypto-js": "^3.1.9-1",
     "datatables.net": "^1.10.19",
     "datatables.net-dt": "^1.10.19",
     "install": "^0.12.2",
+    "jose": "^3.12.3",
     "jquery": "^3.3.1",
+    "jsonwebtoken": "^8.5.1",
     "mydatepicker": "^2.6.6",
     "mydaterangepicker": "^4.2.1",
     "ng2-file-upload": "^1.3.0",
@@ -53,6 +56,7 @@
     "ngx-daterangepicker-material": "^2.1.3",
     "npm": "^6.9.0",
     "rxjs": "^6.3.3",
+    "stream": "0.0.2",
     "sweetalert2": "^8.0.1",
     "web-animations-js": "^2.3.2",
     "zone.js": "^0.8.29"
